# mvbook

./: .gitignore  makefile  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: deploy.yml  lint.yml  release.yml  test.yml
mvbook/: __init__.py  cli.py
tests/: test_cli.py  test_e2e.py
